--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,20 @@
   </head>
 
   <body>
+  <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/limitedsarasota">Properties</a></li>
+        <% if session.fetch(:user_id) == nil%>
+        <li><a href="/user_sign_up">Sign Up</a></li>
+        <li><a href="/user_sign_in">Sign In</a></li>
+        <%else%>
+        <li><a href="/bookmarks">My Bookmarks</a></li>
+        <li><a href="/edit_user_profile">My Account</a></li>
+        <li><a href="/user_sign_out">Sign Out</a></li>
+        <%end%>
+      </ul>
+      <p><%= notice %></p>
+      <p><%= alert %></p>
     <%= yield %>
   </body>
 </html>
