--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      List of all bookmarks
+      My bookmarks
     </h1>
   </div>
 </div>
@@ -14,68 +14,54 @@
       Add a new bookmark
     </h2>
 
-    <form action="/insert_bookmark" method="post">
+<form action="/insert_bookmark" method="post">
+
       <div>
         <label for="user_id_box">
           User
         </label>
 
-        <input type="text" id="user_id_box" name="query_user_id">
+
+          <select name="query_limitedsarasota_id">
+            <%Limitedsarasotum.all.order(:address).each do |a_thing|%>
+              <option value="<%= a_thing.id%>"><%=a_thing.address%></option>
+            <%end%>
+          </select>
       </div>
-
-      <div>
-        <label for="limitedsarasota_id_box">
-          Limitedsarasota
-        </label>
-
-        <input type="text" id="limitedsarasota_id_box" name="query_limitedsarasota_id">
-      </div>
-
+      <input type="hidden" name="query_user_id" value="<%= @current_user.id %>">
       <button>
-        Create bookmark
+        Bookmark this property
       </button>
     </form>
   </div>
 </div>
+
+
+
 
 <hr>
 <div>
   <div>
     <table border="1">
       <tr>
+
         <th>
-          ID
+          Address
         </th>
 
         <th>
-          User
+          First Bookmarked at
         </th>
 
         <th>
-          Limitedsarasota
+        Property Details
         </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
         <th>
         </th>
       </tr>
 
       <% @list_of_bookmarks.each do |a_bookmark| %>
       <tr>
-        <td>
-          <%= a_bookmark.id %>
-        </td>
-
-        <td>
-          <%= a_bookmark.user_id %>
-        </td>
 
         <td>
           <%= a_bookmark.limitedsarasota_id %>
@@ -84,14 +70,14 @@
         <td>
           <%= time_ago_in_words(a_bookmark.created_at) %> ago
         </td>
-        <td>
-          <%= time_ago_in_words(a_bookmark.updated_at) %> ago
-        </td>
 
         <td>
-          <a href="/bookmarks/<%= a_bookmark.id %>">
+          <a href="/limitedsarasota/<%= a_bookmark.limitedsarasota_id %>">
             Show details
           </a>
+        </td>
+        <td>
+          <a href="/delete_bookmark/<%= a_bookmark.id%>">Un-bookmark</a>
         </td>
       </tr>
       <% end %>
