--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <body>
   <ul>
         <li><a href="/">Home</a></li>
+        <li><a href="/edu">Investing Education</a></li>
         <li><a href="/limitedsarasota">Properties</a></li>
         <% if session.fetch(:user_id) == nil%>
         <li><a href="/user_sign_up">Sign Up</a></li>
