--- a/app/views/limitedsarasota/show.html.erb
+++ b/app/views/limitedsarasota/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      Limitedsarasotum #<%= @the_limitedsarasotum.id %> details
+      Limitedsarasotum #<%= @the_limitedsarasotum.address %> details
     </h1>
 
     <div>
