Drop down needs a little work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,23 +12,63 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/mystyles.css">
 
   </head>
 
   <body>
-  <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/edu">Investing Education</a></li>
-        <li><a href="/limitedsarasota">Properties</a></li>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/home">RevEstate</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/edu">Investing Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/limitedsarasota">Property List</a>
+        </li>
         <% if session.fetch(:user_id) == nil%>
-        <li><a href="/user_sign_up">Sign Up</a></li>
-        <li><a href="/user_sign_in">Sign In</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user_sign_up">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user_sign_in">Sign In</a>
+        </li>
         <%else%>
-        <li><a href="/bookmarks">My Bookmarks</a></li>
-        <li><a href="/edit_user_profile">My Account</a></li>
-        <li><a href="/user_sign_out">Sign Out</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/bookmarks">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/edit_user_profile">My Account</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user_sign_out">Sign Out</a>
+        </li>
         <%end%>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Property Locations
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/limitedsarasota">Sarasota</a></li>
+            <li><a class="dropdown-item" href="#">Some More Property Locations</a></li>
+            <li><a class="dropdown-item" href="#">Even more Property Locations</a></li>
+          </ul>
+        </li>
       </ul>
+    </div>
+  </div>
+</nav>
+
       <p><%= notice %></p>
       <p><%= alert %></p>
     <%= yield %>
