--- a/app/views/limitedsarasota/home.html.erb
+++ b/app/views/limitedsarasota/home.html.erb
@@ -17,5 +17,6 @@
 <div>
   <div>
       This is where our company description would go. We would talk about our founding, mission, etc.
+      XYZ Real Estate Investments was founded in 2005 by a group of experienced real estate professionals with a shared vision and passion for creating wealth through strategic property investments. With a mission to empower individuals to build their financial futures through real estate, the company aims to provide accessible and innovative investment opportunities, leveraging market expertise, data-driven analysis, and a commitment to ethical and sustainable practices. By focusing on long-term value creation and delivering consistent returns, XYZ Real Estate Investments strives to be a trusted partner for investors seeking to grow their wealth in the dynamic and rewarding realm of real estate.
   </div>
 </div>
