--- a/app/views/limitedsarasota/show.html.erb
+++ b/app/views/limitedsarasota/show.html.erb
@@ -3,7 +3,8 @@
     <h1>
       Limitedsarasotum #<%= @the_limitedsarasotum.address %> details
     </h1>
-
+    <hr>
+      <%=  eval(@the_limitedsarasotum.values_assessed)%>
     <div>
       <div>
         <a href="/limitedsarasota">
