--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/mystyles.css">
 
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -44,7 +45,7 @@
         </li>
         <%else%>
         <li class="nav-item">
-          <a class="nav-link" href="/bookmarks">Sign Up</a>
+          <a class="nav-link" href="/bookmarks">My Bookmarks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/edit_user_profile">My Account</a>
@@ -53,17 +54,6 @@
           <a class="nav-link" href="/user_sign_out">Sign Out</a>
         </li>
         <%end%>
-        
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Property Locations
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/limitedsarasota">Sarasota</a></li>
-            <li><a class="dropdown-item" href="#">Some More Property Locations</a></li>
-            <li><a class="dropdown-item" href="#">Even more Property Locations</a></li>
-          </ul>
-        </li>
       </ul>
     </div>
   </div>
