--- a/app/views/limitedsarasota/show.html.erb
+++ b/app/views/limitedsarasota/show.html.erb
@@ -4,9 +4,8 @@
       <%= @the_limitedsarasotum.address %> details
     </h1>
     <hr>
-      <%= thevalues = eval(@the_limitedsarasotum.values_assessed)%>
 
-      <%= line_chart ({"2021-01-01" => 2, "2021-01-02" => 3}) %>
+      <%= line_chart [ {data: @chartdata}], :library => {title: "Housing Value Over Time"} %>
     <div>
       <div>
         <a href="/limitedsarasota">
