--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -64,7 +64,7 @@
       <tr>
 
         <td>
-          <%= a_bookmark.limitedsarasota_id %>
+          <%= theproperty = Limitedsarasotum.find(a_bookmark.limitedsarasota_id).address %>
         </td>
 
         <td>
