--- a/app/views/limitedsarasota/show.html.erb
+++ b/app/views/limitedsarasota/show.html.erb
@@ -15,7 +15,7 @@
 
       <div>
         <a href="/delete_limitedsarasotum/<%= @the_limitedsarasotum.id %>">
-          Delete limitedsarasotum
+          Delete this property
         </a>
       </div>
     </div>
